--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,17 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "all": "^0.0.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "mongodb": "^6.8.0",
-    "react": "^17.0.2",
+    "react": "^16.14.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^3.7.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^16.14.0",
     "react-image-lightbox": "^5.1.1",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
