--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "author": "DEVX",
   "description": "PETS REUNITE HUB",
-  "main": "index.js",
+ "main": "src/index.js",
+
   "scripts": {
-    "start": "node src/index",
-    "dev": "nodemon src/index"
-  },
+  "start": "node src/index.js",
+  "dev": "nodemon src/index.js"
+},
+
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
